kns: Make sure we don't emit twice the same resource

It breaks assumptions in the front-end.

BUG: 482095